# MPointer_Server

./: CMakeLists.txt  MPointer.cpp  MPointer.h  MPointerGC.h  Mapa_Memoria.cpp  Mapa_Memoria.h  main.cpp
Server/: Server.cpp  Server.h
